# bazel

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  bazel-bazel  bazel-bin  bazel-out  bazel-testlogs  go.mod
cmd/: BUILD.bazel  main.go  main_test.go
custom-bzl/: BUILD  create_hello.bzl  write_world.bzl
